[package]
name = "test-241017-main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "console",
    "Worker",
    "MessageEvent",
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "File",
    "Blob",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"
