[package]
name = "test-241017"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    'console',
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"
